--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- displays site properly based on user's device -->
@@ -23,12 +29,7 @@
   <body>
     <div id="main" class="center">
       <div class="top">
-        <img
-          src="./assets/images/icon-star.svg"
-          alt="icon-star"
-          width="30px"
-          height="30px"
-        />
+        <img src="./assets/images/icon-star.svg" alt="icon-star" />
         <h1 style="padding-left: 20px">FAQs</h1>
       </div>
 
@@ -65,7 +66,7 @@
       </div>
 
       <div class="plus">
-        <h4>How can I get help if I'm stuck on a Frontend Mentor challenge?</h4>
+        <h4>How can I get help if I'm stuck on a challenge?</h4>
         <img
           src="./assets/images/icon-plus.svg"
           alt="icon-plus"
